--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ billiard==4.2.0
 celery==5.4.0
 certifi==2024.8.30
 cffi==1.17.1
+chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.1
@@ -14,17 +15,24 @@ cryptography==43.0.1
 dj-rest-auth==6.0.0
 Django==5.1.1
 django-allauth==64.2.1
+django-redis==5.4.0
 djangorestframework==3.15.2
+et-xmlfile==1.1.0
+gunicorn==23.0.0
 idna==3.10
 kombu==5.4.1
 numpy==2.1.1
+openpyxl==3.1.5
+packaging==24.1
 pandas==2.2.2
 prompt_toolkit==3.0.47
+psycopg2-binary==2.9.9
 pycparser==2.22
 PyJWT==2.9.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
+redis==5.0.8
 requests==2.32.3
 six==1.16.0
 sqlparse==0.5.1
